# Boreas

./: .gitignore  .pylintrc  Dockerfile  README.md  README.org  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml  pipelines.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/core/: config.py  errors.py  events.py  logging.py  paginator.py
app/services/: predict.py
dagster/: definitions.py
dagster_boreas/: definitions.py
dagster_boreas/assets/: dbt_assets.py  dlt_assets.py
dagster_boreas/resources/: duckdb_resource.py
dashboard/: README.md  app.py
dashboard/pages/: 1_Data_Profiling.py
dbt_boreas/: .gitignore  .user.yml  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_boreas/macros/: generate_schema_name.sql
dlt/: README.md  run_dlt_pipelines.py  weather_pipeline.py
dlt/.dlt/: config.toml
dlt/pipelines/: avalanche_pipeline.py  region_pipeline.py  weather_forecast_pipeline.py  weather_historic_pipeline.py  weather_pipeline.py
dlt/utils/: __init__.py  logging.py
dlt_boreas/: exceptions.py  sync_pipelines.py
dlt_boreas/.dlt/: config.toml
dlt_boreas/pipelines/: avalanche_pipeline.py  region_pipeline.py  weather_historic_pipeline.py
ml/model/: SequenceGenerator.py  WindowGenerator.py  avalanche_warning_prediction.py  inference.py
notebooks/: README.org  data_cleaning.ipynb  eda.ipynb  inference.ipynb  rnn_analysis.ipynb  rnn_playground.ipynb  warnings_cleaned.csv  weather_warning_combined.csv
notebooks/data/: avalanches.csv  weather.csv
notebooks/models/: simple_lstm.h5  simple_lstm.keras
src/: README.md
src/config/: regions.py  (+1 more)
terraform/: .gitignore  Dockerfile  README.md  github-workflows-pipelines.yml  github-workflows-streamlit.yml  github.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
(+41 files in other folders)
