[project]
name = "boreas-dataplattform"
version = "0.1.0"
description = "The dataplatform for the avalanche dataplatform Boreas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "dlt[duckdb,workspace]>=1.20.0",
    "duckdb>=1.4.3",
    "enlighten>=1.14.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
